# fluffyclone

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: github-pages.yml  pypi.yml
docs/: README.md  clonal_trees.md  conf.py  distributions.md  index.md  index.rst  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/api/: index.md
docs/models/: index.md  model1.md  model2.md
docs/quickstart/: index.md
src/fluffyclone/: __init__.py  compiled.py  distribution.py  model.py  sampling.py  utils.py
