[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fluffyclone"
dynamic = ["version"]
description = "Using the weighted uniform distribution over spanning trees"
readme = "README.md"
authors = [
    { name="Ulysse Herbach", email="ulysse.herbach@inria.fr" },
]
license = "BSD-3-Clause"

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.4",
    "networkx>=2.6",
]

[project.urls]
Repository = "https://github.com/ulysseherbach/fluffyclone"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git*",
    "/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fluffyclone"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme="no-local-version" }

[tool.ruff]
select = ["E", "F", "W"]
line-length = 79
